// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pitch /> should render Pitch with the team and theirs tshirst 1`] = `
<div
  class="pitch "
>
  
</div>
`;

exports[`<Pitch /> should render Pitch with the team as a list 1`] = `
<div
  class="pitch list"
>
  <ol>
    
  </ol>
</div>
`;
